@@ -81,6 +81,8 @@ typedef struct Demuxer {
     /* number of streams that the user was warned of */
     int nb_streams_warn;
 
+    double readrate_initial_burst;
+
     AVThreadMessageQueue *in_thread_queue;
     int                   thread_queue_size;
     pthread_t             thread;
@@ -455,6 +457,7 @@ int ifile_get_packet(InputFile *f, AVPacket **pkt)
                               (f->start_time != AV_NOPTS_VALUE ? f->start_time : 0)
                              );
         float scale = f->rate_emu ? 1.0 : f->readrate;
+        int64_t burst_until = AV_TIME_BASE * d->readrate_initial_burst;
         for (i = 0; i < f->nb_streams; i++) {
             InputStream *ist = f->streams[i];
             int64_t stream_ts_offset, pts, now;
@@ -462,7 +465,7 @@ int ifile_get_packet(InputFile *f, AVPacket **pkt)
             stream_ts_offset = FFMAX(ist->first_dts != AV_NOPTS_VALUE ? ist->first_dts : 0, file_start);
             pts = av_rescale(ist->dts, 1000000, AV_TIME_BASE);
             now = (av_gettime_relative() - ist->start) * scale + stream_ts_offset;
-            if (pts > now)
+            if (pts - burst_until > now)
                 return AVERROR(EAGAIN);
         }
     }
@@ -1234,6 +1237,19 @@ int ifile_open(const OptionsContext *o, const char *filename)
     if (f->readrate && f->rate_emu) {
         av_log(d, AV_LOG_WARNING, "Both -readrate and -re set. Using -readrate %0.3f.\n", f->readrate);
         f->rate_emu = 0;
+    }
+
+    if (f->readrate || f->rate_emu) {
+        d->readrate_initial_burst = o->readrate_initial_burst ? o->readrate_initial_burst : 0.0;
+        if (d->readrate_initial_burst < 0.0) {
+            av_log(d, AV_LOG_ERROR,
+                   "Option -readrate_initial_burst is %0.3f; it must be non-negative.\n",
+                   d->readrate_initial_burst);
+            exit_program(1);
+        }
+    } else if (o->readrate_initial_burst) {
+        av_log(d, AV_LOG_WARNING, "Option -readrate_initial_burst ignored "
+               "since neither -readrate nor -re were given\n");
     }
 
     d->thread_queue_size = o->thread_queue_size;
